Light changing html

--- a/about.html
+++ b/about.html
@@ -168,7 +168,9 @@
         <div class="footer-col">
           <h3>Contact us</h3>
           <p class="footer-email-id">
-            <a href="mailto:104082552@student.swin.edu.au" class="footer-email-id"
+            <a
+              href="mailto:104082552@student.swin.edu.au"
+              class="footer-email-id"
               >Email: 104082552@student.swin.edu.au</a
             >
           </p>
@@ -194,7 +196,7 @@
         </div>
       </div>
       <hr />
-      <p>Deadline is coming 2023 &copy& - All Rights Reserved</p>
+      <p>CloudLabs 2023 &copy& - All Rights Reserved</p>
     </footer>
   </body>
 </html>
