--- a/enhancements.html
+++ b/enhancements.html
@@ -30,118 +30,123 @@
       </nav>
     </header>
     <main class="enhancements-main">
-    <h1>Enhancements</h1>
-    <h2><a href="apply.html">First: CSS Heading Typing Animation</a></h2>
-    <p>
-      The first enhancement uses advanced CSS such as keyframes and animations.
-    </p>
-    <p>
-      The animation is done by placing the page heading into a container, then
-      gradually increasing the width of the container to make it look like the
-      text is being typed out. For the blinking cursor animation, the right
-      border of the container alternates between solid black and transparent.
-    </p>
-    <p>
-      Due to each heading having different lengths, the CSS must be adapted
-      individually to fit each heading.
-    </p>
-    <p>
-      The animation is done using only HTML and CSS, and the keyframes and
-      animations go beyond what was taught in the lectures. Overall, the aim of
-      this enhancement was to make the website more dynamic and enjoyable to
-      use, therefore increasing the quality of the website and making it more
-      engaging to users.
-    </p>
-    <strong>References:</strong>
-    <p>
-      Marko n.d., ‘CSS Typing Effect’, Codepen, viewed 31 March 2023,
-      https://codepen.io/denic/pen/GRoOxbM.
-    </p>
-    <p>
-      Nikonorov, M 2021, ‘How to Create a CSS Typewriter Effect for Your Website
-      — SitePoint’, www.sitepoint.com, viewed 31 March 2023,
-      https://www.sitepoint.com/css-typewriter-effect.
-    </p>
+      <h1>Enhancements</h1>
+      <h2><a href="apply.html">First: CSS Heading Typing Animation</a></h2>
+      <p>
+        The first enhancement uses advanced CSS such as keyframes and
+        animations.
+      </p>
+      <p>
+        The animation is done by placing the page heading into a container, then
+        gradually increasing the width of the container to make it look like the
+        text is being typed out. For the blinking cursor animation, the right
+        border of the container alternates between solid black and transparent.
+      </p>
+      <p>
+        Due to each heading having different lengths, the CSS must be adapted
+        individually to fit each heading.
+      </p>
+      <p>
+        The animation is done using only HTML and CSS, and the keyframes and
+        animations go beyond what was taught in the lectures. Overall, the aim
+        of this enhancement was to make the website more dynamic and enjoyable
+        to use, therefore increasing the quality of the website and making it
+        more engaging to users.
+      </p>
+      <strong>References:</strong>
+      <p>
+        Marko n.d., ‘CSS Typing Effect’, Codepen, viewed 31 March 2023,
+        https://codepen.io/denic/pen/GRoOxbM.
+      </p>
+      <p>
+        Nikonorov, M 2021, ‘How to Create a CSS Typewriter Effect for Your
+        Website — SitePoint’, www.sitepoint.com, viewed 31 March 2023,
+        https://www.sitepoint.com/css-typewriter-effect.
+      </p>
 
-    <h2><a href="about.html">Second: CSS Hovering Card Animation</a></h2>
-    <p>The second enhancement uses simple hover CSS animation.</p>
-    <p>
-      The animation is done by adding a hover effect to the group member's card.
-    </p>
-    <p>
-      When the user hovers the group member's card, the card will scale up 20%,
-      the background color of the card changes to the purple linear gradient
-      color, the member's image will scale 10% up and the text color will
-      changes into white. In addition, the 'Contact Us' button will also scale
-      up 20% and change its color to purple linear gradient while user hovering
-      it.
-    </p>
-    <p>
-      This animation is done by only using HTML and simple CSS hover attribute.
-      The aim of this animation was to make the about page looks more modern and
-      ease to use, thus increasing the website's quality and consistency.
-    </p>
-    <strong>References:</strong>
-    <p>
-      Ivanov, A 2022, 'Adding a Gradient Hover Effect to Buttons with CSS',
-      www.stackdiary.com, viewed 20 March 2023,
-      https://stackdiary.com/gradient-hover-effect-css/
-    </p>
-    <p>
-      W3Schools n.d., 'CSS :hover Selector', W3Schools.com, viewed 20 March
-      2023, https://www.w3schools.com/cssref/sel_hover.php
-    </p>
-    <p>
-      Coding Artist 2022, 'Responsive Our Team Section | CSS Tutorial | With
-      Source Code', youtube.com, viewed 20 March 2023,
-      https://www.youtube.com/watch?v=H_64n7gY3h0
-    </p>
-  </main>
-  <footer id="general-footer">
-    <div class="footer-row">
-      <div class="footer-col">
-        <img
-          src="./images/logo-removebg-preview.png"
-          class="logo"
-          alt="LOGO"
-        />
-        <p>
-          Our company provides details of "Chief Technology Officer(CTO)" and
-          "Cloud engineering", including base position, skills needed,
-          qualification and salary average per year in Australia.
-        </p>
-      </div>
+      <h2><a href="about.html">Second: CSS Hovering Card Animation</a></h2>
+      <p>The second enhancement uses simple hover CSS animation.</p>
+      <p>
+        The animation is done by adding a hover effect to the group member's
+        card.
+      </p>
+      <p>
+        When the user hovers the group member's card, the card will scale up
+        20%, the background color of the card changes to the purple linear
+        gradient color, the member's image will scale 10% up and the text color
+        will changes into white. In addition, the 'Contact Us' button will also
+        scale up 20% and change its color to purple linear gradient while user
+        hovering it.
+      </p>
+      <p>
+        This animation is done by only using HTML and simple CSS hover
+        attribute. The aim of this animation was to make the about page looks
+        more modern and ease to use, thus increasing the website's quality and
+        consistency.
+      </p>
+      <strong>References:</strong>
+      <p>
+        Ivanov, A 2022, 'Adding a Gradient Hover Effect to Buttons with CSS',
+        www.stackdiary.com, viewed 20 March 2023,
+        https://stackdiary.com/gradient-hover-effect-css/
+      </p>
+      <p>
+        W3Schools n.d., 'CSS :hover Selector', W3Schools.com, viewed 20 March
+        2023, https://www.w3schools.com/cssref/sel_hover.php
+      </p>
+      <p>
+        Coding Artist 2022, 'Responsive Our Team Section | CSS Tutorial | With
+        Source Code', youtube.com, viewed 20 March 2023,
+        https://www.youtube.com/watch?v=H_64n7gY3h0
+      </p>
+    </main>
+    <footer id="general-footer">
+      <div class="footer-row">
+        <div class="footer-col">
+          <img
+            src="./images/logo-removebg-preview.png"
+            class="logo"
+            alt="LOGO"
+          />
+          <p>
+            Our company provides details of "Chief Technology Officer(CTO)" and
+            "Cloud engineering", including base position, skills needed,
+            qualification and salary average per year in Australia.
+          </p>
+        </div>
 
-      <div class="footer-col">
-        <h3>Contact us</h3>
-        <p class="footer-email-id">
-          <a href="mailto:104082552@student.swin.edu.au" class="footer-email-id"
-            >Email: 104082552@student.swin.edu.au</a
-          >
-        </p>
-        <p>Phone Number: +61423032755</p>
-      </div>
+        <div class="footer-col">
+          <h3>Contact us</h3>
+          <p class="footer-email-id">
+            <a
+              href="mailto:104082552@student.swin.edu.au"
+              class="footer-email-id"
+              >Email: 104082552@student.swin.edu.au</a
+            >
+          </p>
+          <p>Phone Number: +61423032755</p>
+        </div>
 
-      <div class="footer-col">
-        <h3>Links</h3>
-        <ul>
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="./jobs.html">Jobs</a></li>
-          <li><a href="./apply.html">Apply</a></li>
-          <li><a href="./about.html">About</a></li>
-          <li><a href="./enhancements.html">Enhancements</a></li>
-        </ul>
+        <div class="footer-col">
+          <h3>Links</h3>
+          <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./jobs.html">Jobs</a></li>
+            <li><a href="./apply.html">Apply</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./enhancements.html">Enhancements</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h3>Sign up to our newsletter</h3>
+          <form>
+            <input type="email" placeholder="Enter your email here" required />
+            <input type="submit" />
+          </form>
+        </div>
       </div>
-      <div class="footer-col">
-        <h3>Sign up to our newsletter</h3>
-        <form>
-          <input type="email" placeholder="Enter your email here" required />
-          <input type="submit" />
-        </form>
-      </div>
-    </div>
-    <hr />
-    <p>Deadline is coming 2023 &copy& - All Rights Reserved</p>
-  </footer>
+      <hr />
+      <p>CloudLabs 2023 &copy& - All Rights Reserved</p>
+    </footer>
   </body>
 </html>
