--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
       <br />
       <br />
       <br />
-        <div class="header-container">
-          <div class="index-typed-out">
-            <h1>This is CloudLabs</h1>
-          </div>
-          </div>
+      <div class="header-container">
+        <div class="index-typed-out">
+          <h1>This is CloudLabs</h1>
+        </div>
+      </div>
       <br />
       <h2>
         We create your dream website with our inhouse specialist team with ease
@@ -72,9 +72,9 @@
       </div>
     </div>
     <div class="img">
-      <br>
-      <br>
-      <br>
+      <br />
+      <br />
+      <br />
       <h2>Companies we have worked with</h2>
       <div class="logos">
         <img class="logo-indi" src="images/forbes.png" alt="forbes" />
@@ -88,9 +88,9 @@
         <img class="logo-indi" src="images/nestle.png" alt="nestle" />
         <img class="logo-indi" src="images/youtube.png" alt="youtube" />
       </div>
-      <br>
-      <br>
-      <br>
+      <br />
+      <br />
+      <br />
       <h2>Here's some of our client reviews</h2>
       <div class="reviews-container">
         <h2>Reviews</h2>
@@ -142,7 +142,9 @@
         <div class="footer-col">
           <h3>Contact us</h3>
           <p class="footer-email-id">
-            <a href="mailto:104082552@student.swin.edu.au" class="footer-email-id"
+            <a
+              href="mailto:104082552@student.swin.edu.au"
+              class="footer-email-id"
               >Email: 104082552@student.swin.edu.au</a
             >
           </p>
@@ -168,7 +170,7 @@
         </div>
       </div>
       <hr />
-      <p>Deadline is coming 2023 &copy& - All Rights Reserved</p>
+      <p>CloudLabs 2023 &copy& - All Rights Reserved</p>
     </footer>
   </body>
 </html>
