--- a/jobs.html
+++ b/jobs.html
@@ -226,7 +226,7 @@
               qualification and salary average per year in Australia.
             </p>
           </div>
-  
+
           <div class="footer-col">
             <h3>Contact us</h3>
             <p class="footer-email-id">
@@ -236,7 +236,7 @@
             </p>
             <p>Phone Number: +61423032755</p>
           </div>
-  
+
           <div class="footer-col">
             <h3>Links</h3>
             <ul>
@@ -256,7 +256,7 @@
           </div>
         </div>
         <hr />
-        <p>Deadline is coming 2023 &copy& - All Rights Reserved</p>
+        <p>CloudLabs 2023 &copy& - All Rights Reserved</p>
       </footer>
 </body>
 </html>
