--- a/about.html
+++ b/about.html
@@ -196,7 +196,7 @@
         </div>
       </div>
       <hr />
-      <p>CloudLabs 2023 &copy& - All Rights Reserved</p>
+      <p>CloudLabs 2023 &copy; - All Rights Reserved</p>
     </footer>
   </body>
 </html>
