--- a/apply.html
+++ b/apply.html
@@ -352,7 +352,7 @@
         </div>
       </div>
       <hr />
-      <p>CloudLabs 2023 &copy& - All Rights Reserved</p>
+      <p>CloudLabs 2023 &copy; - All Rights Reserved</p>
     </footer>
   </body>
 </html>
