Changing reviewer's name so that it doesn't match with the apply's placeholer

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             "The team is amazing! I love how easy it is to customize and the
             quality is top-notch."
           </p>
-          <p class="author">- John Doe</p>
+          <p class="author">- Bill Gate</p>
         </div>
         <div class="review-card">
           <div class="rating">
@@ -119,7 +119,7 @@
           <p class="review-text">
             "Best company to get your website built in melbourne hands down."
           </p>
-          <p class="author">- Jane Smith</p>
+          <p class="author">- Tim Cook</p>
         </div>
       </div>
     </div>
