--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
     <title>CloudLabs</title>
   </head>
-  <body>
+  <body class="index-body">
     <header>
       <nav id="header-nav">
         <div class="logo">
