Adding background to html page

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
     <title>About Us - CloudLabs</title>
   </head>
-  <body id="about-body">
+  <body id="about-body" class="index-body">
     <header>
       <nav id="header-nav">
         <div class="logo">
