--- a/apply.html
+++ b/apply.html
@@ -9,7 +9,7 @@
     <title>Apply - CloudLabs</title>
   </head>
 
-  <body>
+  <body class="index-body">
     <header>
       <nav id="header-nav">
         <div class="logo">
