--- a/enhancements.html
+++ b/enhancements.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <meta name="description" content="Website enhancements" />
   </head>
-  <body>
+  <body class="index-body">
     <header>
       <nav id="header-nav">
         <div class="logo">
