--- a/jobs.html
+++ b/jobs.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <!-- <link rel="stylesheet" href="./styles/header_footer.css"> -->
 </head>
-<body>
+<body class="index-body">
     <header>
         <nav id="header-nav">
           <div class="logo">
