--- a/about.html
+++ b/about.html
@@ -37,10 +37,10 @@
         </div>
         <p class="about-p">
           We are a team of quick learners who are always on the lookout for the
-          latest advancements in the cloud technology industry. We continuously
-          upgrade our skills and knowledge through attending conferences,
-          training programs, and workshops to stay upgrade of the latest trends
-          and technologies.
+          latest advancements in the cloud technology and web developing
+          industry. We continuously upgrade our skills and knowledge through
+          attending conferences, training programs, and workshops to stay
+          upgrade of the latest trends and technologies.
         </p>
         <div class="about-group-info">
           <dl>
