add semantic elements

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         </ul>
       </nav>
     </header>
-    <div class="img">
-      <br />
-      <br />
-      <br />
+    <section class="img">
+      <br>
+      <br>
+      <br>
       <div class="header-container">
         <div class="index-typed-out">
           <h1>This is CloudLabs</h1>
@@ -48,17 +48,15 @@
         believe that a strong online presence is essential for success in
         today's digital age, and we are committed to helping our clients achieve
         their goals through expert web development services.
-        <br /><br />
+        <br><br>
         Our team of experienced developers, designers, and project managers work
         closely with each client to understand their unique needs and create a
         website or web application that perfectly fits their vision. We use the
         latest technologies and design trends to ensure that every website we
         create is modern, fast, and user-friendly.
       </p>
-
-      <div>
+      <section>
         <h2>Services we Provide</h2>
-
         <div class="row">
           <div class="column">Content Marketing</div>
           <div class="column">Digital Marketing</div>
@@ -69,14 +67,14 @@
           <div class="column">Web Development</div>
           <div class="column">Web Optimization</div>
         </div>
-      </div>
+      </section>
     </div>
-    <div class="img">
+    <section class="img">
       <br />
       <br />
       <br />
       <h2>Companies we have worked with</h2>
-      <div class="logos">
+      <section class="logos">
         <img class="logo-indi" src="images/forbes.png" alt="forbes" />
         <img class="logo-indi" src="images/google.png" alt="google" />
         <img class="logo-indi" src="images/bloomberg.png" alt="bloomberg" />
@@ -87,12 +85,12 @@
         <img class="logo-indi" src="images/swinburne.png" alt="swinburne" />
         <img class="logo-indi" src="images/nestle.png" alt="nestle" />
         <img class="logo-indi" src="images/youtube.png" alt="youtube" />
-      </div>
+      </section>
       <br />
       <br />
       <br />
       <h2>Here's some of our client reviews</h2>
-      <div class="reviews-container">
+      <section class="reviews-container">
         <h2>Reviews</h2>
         <div class="review-card">
           <div class="rating">
@@ -108,7 +106,7 @@
           </p>
           <p class="author">- Bill Gate</p>
         </div>
-        <div class="review-card">
+        <section class="review-card">
           <div class="rating">
             <span class="star">&#9733;</span>
             <span class="star">&#9733;</span>
@@ -120,9 +118,9 @@
             "Best company to get your website built in melbourne hands down."
           </p>
           <p class="author">- Tim Cook</p>
-        </div>
-      </div>
-    </div>
+        </section>
+      </section>
+    </section>
 
     <footer id="general-footer">
       <div class="footer-row">
