Adding hyperlink with styles index page, adding css references and add hyperlink to enhancements

--- a/enhancements.html
+++ b/enhancements.html
@@ -56,12 +56,16 @@
       <strong>References:</strong>
       <p>
         Marko n.d., ‘CSS Typing Effect’, Codepen, viewed 31 March 2023,
-        https://codepen.io/denic/pen/GRoOxbM.
+        <a href="https://codepen.io/denic/pen/GRoOxbM"
+          >https://codepen.io/denic/pen/GRoOxbM</a
+        >.
       </p>
       <p>
         Nikonorov, M 2021, ‘How to Create a CSS Typewriter Effect for Your
         Website — SitePoint’, www.sitepoint.com, viewed 31 March 2023,
-        https://www.sitepoint.com/css-typewriter-effect.
+        <a href="https://www.sitepoint.com/css-typewriter-effect"
+          >https://www.sitepoint.com/css-typewriter-effect</a
+        >.
       </p>
 
       <h2><a href="about.html">Second: CSS Hovering Card Animation</a></h2>
@@ -88,16 +92,23 @@
       <p>
         Ivanov, A 2022, 'Adding a Gradient Hover Effect to Buttons with CSS',
         www.stackdiary.com, viewed 20 March 2023,
-        https://stackdiary.com/gradient-hover-effect-css/
+        <a href="https://stackdiary.com/gradient-hover-effect-css/"
+          >https://stackdiary.com/gradient-hover-effect-css</a
+        >.
       </p>
       <p>
         W3Schools n.d., 'CSS :hover Selector', W3Schools.com, viewed 20 March
-        2023, https://www.w3schools.com/cssref/sel_hover.php
+        2023,
+        <a href="https://www.w3schools.com/cssref/sel_hover.php"
+          >https://www.w3schools.com/cssref/sel_hover.php</a
+        >.
       </p>
       <p>
         Coding Artist 2022, 'Responsive Our Team Section | CSS Tutorial | With
         Source Code', youtube.com, viewed 20 March 2023,
-        https://www.youtube.com/watch?v=H_64n7gY3h0
+        <a href="https://www.youtube.com/watch?v=H_64n7gY3h0"
+          >https://www.youtube.com/watch?v=H_64n7gY3h0</a
+        >.
       </p>
     </main>
     <footer id="general-footer">
