Re adding index.html

--- a/index.html
+++ b/index.html
@@ -121,12 +121,9 @@
         </section>
       </section>
     </section>
-        </div>
-      </div>
-      <div class="link-report">
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Link To Report</a>
-      </div>
-    </div>
+    <section class="link-report">
+      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Link To Report</a>
+    </section>
 
     <footer id="general-footer">
       <div class="footer-row">
