add semantic elements + alt text

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
           <a href="index.html">
             <img
               src="./images/logo-removebg-preview.png"
-              alt="LOGO"
+              alt="CloudLabs logo"
               width="80"
               height="80"
           /></a>
@@ -42,7 +42,7 @@
           attending conferences, training programs, and workshops to stay
           upgrade of the latest trends and technologies.
         </p>
-        <div class="about-group-info">
+        <section class="about-group-info">
           <dl>
             <dt>Group Name</dt>
             <dd>Deadline Is Coming</dd>
@@ -59,33 +59,33 @@
             <dt>Course</dt>
             <dd>Computing Technology Inquiry Project</dd>
           </dl>
-        </div>
+        </section>
         <div class="about-card">
-          <img src="./images/member/Simon.png" alt="Member 1" />
+          <img src="./images/member/Simon.png" alt="Tuan Minh member photo">
           <h3 class="about-h3">Tuan Minh</h3>
           <p>Role: Leader</p>
         </div>
         <div class="about-card">
-          <img src="./images/member/Nathan.jpeg" alt="Member 2" />
+          <img src="./images/member/Nathan.jpeg" alt="Nathan member photo">
           <h3 class="about-h3">Nathan</h3>
           <p>Role: Co-Leader</p>
         </div>
         <div class="about-card">
-          <img src="./images/member/MaiAn.JPG" alt="Member 3" />
+          <img src="./images/member/MaiAn.JPG" alt="Mai An member photo">
           <h3 class="about-h3">Mai An</h3>
           <p>Role: Member</p>
         </div>
         <div class="about-card">
-          <img src="./images/member/amiru.jpg" alt="Member 4" />
+          <img src="./images/member/amiru.jpg" alt="Amiru member photo">
           <h3 class="about-h3">Amiru</h3>
           <p>Role: Member</p>
         </div>
         <div class="about-card">
-          <img src="./images/member/Nhatminh.jpg" alt="Member 5" />
+          <img src="./images/member/Nhatminh.jpg" alt="Nhat Minh member photo">
           <h3 class="about-h3">Nhat Minh</h3>
           <p>Role: Member</p>
         </div>
-        <div class="about-timetable">
+        <section class="about-timetable">
           <h2 class="about-h2">Timetable</h2>
           <table>
             <thead>
@@ -143,12 +143,12 @@
               </tr>
             </tbody>
           </table>
-        </div>
-        <div class="about-mail">
-          <p>Want to get in touch with us ?</p>
+        </section>
+        <section class="about-mail">
+          <p>Want to get in touch with us?</p>
           <a href="mailto:abcdxyz@concac.com">Contact Us</a>
-        </div>
-      </div>
+        </section>
+      </section>
     </main>
     <footer id="general-footer">
       <div class="footer-row">
@@ -156,7 +156,7 @@
           <img
             src="./images/logo-removebg-preview.png"
             class="logo"
-            alt="LOGO"
+            alt="CloudLabs logo"
           />
           <p>
             Our company provides details of "Chief Technology Officer(CTO)" and
