--- a/enhancements.html
+++ b/enhancements.html
@@ -16,7 +16,7 @@
           <a href="index.html">
             <img
               src="./images/logo-removebg-preview.png"
-              alt="LOGO"
+              alt="CloudLabs logo"
               width="80"
               height="80"
           /></a>
@@ -31,6 +31,7 @@
     </header>
     <main class="enhancements-main">
       <h1>Enhancements</h1>
+      <section>
       <h2><a href="apply.html">First: CSS Heading Typing Animation</a></h2>
       <p>
         The first enhancement uses advanced CSS such as keyframes and
@@ -63,7 +64,8 @@
         Website — SitePoint’, www.sitepoint.com, viewed 31 March 2023,
         https://www.sitepoint.com/css-typewriter-effect.
       </p>
-
+    </section>
+    <section>
       <h2><a href="about.html">Second: CSS Hovering Card Animation</a></h2>
       <p>The second enhancement uses simple hover CSS animation.</p>
       <p>
@@ -99,6 +101,7 @@
         Source Code', youtube.com, viewed 20 March 2023,
         https://www.youtube.com/watch?v=H_64n7gY3h0
       </p>
+    </section>
     </main>
     <footer id="general-footer">
       <div class="footer-row">
@@ -106,7 +109,7 @@
           <img
             src="./images/logo-removebg-preview.png"
             class="logo"
-            alt="LOGO"
+            alt="CloudLabs logo"
           />
           <p>
             Our company provides details of "Chief Technology Officer(CTO)" and
