--- a/apply.html
+++ b/apply.html
@@ -16,7 +16,7 @@
           <a href="index.html">
             <img
               src="./images/logo-removebg-preview.png"
-              alt="LOGO"
+              alt="CloudLabs logo"
               width="80"
               height="80"
           /></a>
@@ -312,7 +312,7 @@
           <img
             src="./images/logo-removebg-preview.png"
             class="logo"
-            alt="LOGO"
+            alt="CloudLabs logo"
           />
           <p>
             Our company provides details of "Chief Technology Officer(CTO)" and
