--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
       </nav>
     </header>
     <main>
-      <div class="about-container">
+      <section class="about-container">
         <div class="header-container">
           <div class="about-typed-out">
             <h1 class="about-h1">About our team</h1>
