add favicon to index

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <meta name="description" content="Apply to our open positions" />
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <title>CloudLabs</title>
   </head>
   <body class="index-body">
