validate index.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="column">Web Optimization</div>
         </div>
       </section>
-    </div>
+    </section>
     <section class="img">
       <br />
       <br />
@@ -127,6 +127,7 @@
     <section class="link-report">
       <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Link To Report</a>
     </section>
+    </main>
 
     <footer id="general-footer">
       <div class="footer-row">
