fix footer links padding

--- a/enhancements.html
+++ b/enhancements.html
@@ -145,9 +145,7 @@
         <div class="footer-col">
           <h3>Contact us</h3>
           <p class="footer-email-id">
-            <a
-              href="mailto:104082552@student.swin.edu.au"
-              class="footer-email-id"
+            <a href="mailto:104082552@student.swin.edu.au" class="footer-email-id"
               >Email: 104082552@student.swin.edu.au</a
             >
           </p>
