--- a/jobs.html
+++ b/jobs.html
@@ -49,8 +49,8 @@
             <dl>
                 <dt><strong>Position description reference number</strong></dt>
                 <dd>00000</dd>
-                <dt><strong>Title of the position of successful applicant</strong></dt>
-                <dd>Chief Technology Officer</dd>
+                <dt><strong>Reports to</strong></dt>
+                <dd>Chief Executive Officer</dd>
                 <dt><strong>Salary range</strong></dt>
                 <dd>237,500 &#8211; 376,665 AUD&#x2F;year <sup><a href="jobs.html#cite">[1]</a></sup></dd>
             </dl>
@@ -126,8 +126,8 @@
             <dl>
                 <dt><strong>Position description reference number</strong></dt>
                 <dd>00001</dd>
-                <dt><strong>Title of the position of successful applicants</strong></dt>
-                <dd>Cloud Engineer</dd>
+                <dt><strong>Reports to</strong></dt>
+                <dd>Cloud Architecture Manager</dd>
                 <dt><strong>Salary range</strong></dt>
                 <dd>132,500 &#8211; 180,000 AUD&#x2F;year <sup><a href="jobs.html#cite">[3]</a></sup></dd>
             </dl>
