open video in new tab

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       </section>
     </section>
     <section class="link-report">
-      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Link To Report</a>
+      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Link To Report</a>
     </section>
     </main>
 
