--- a/jobs.html
+++ b/jobs.html
@@ -201,7 +201,7 @@
         </section>
         <hr>
         <aside>
-            <h2>Reference</h2>
+            <h2>References</h2>
             <!-- Set list ID to 'cite' to enable anchor link -->
             <ol id="cite">
                 <li>Anonymous. (n.d.). CTO / Chief Technology Officer Salary & Rates Guide. Clicks IT Recruitment. <a href="https://clicks.com.au/job-salary/cto-chief-technology-officer/">https://clicks.com.au/job-salary/cto-chief-technology-officer/</a></li>
