change mailto link

--- a/about.html
+++ b/about.html
@@ -146,7 +146,7 @@
         </section>
         <section class="about-mail">
           <p>Want to get in touch with us?</p>
-          <a href="mailto:abcdxyz@concac.com">Contact Us</a>
+          <a href="mailto:104082552@student.swin.edu.au">Contact Us</a>
         </section>
       </section>
     </main>
