fix page layout in Firefox

--- a/about.html
+++ b/about.html
@@ -85,6 +85,7 @@
           <h3 class="about-h3">Nhat Minh</h3>
           <p>Role: Member</p>
         </div>
+        <div>
         <section class="about-timetable">
           <h2 class="about-h2">Timetable</h2>
           <table>
@@ -148,7 +149,7 @@
           <p>Want to get in touch with us?</p>
           <a href="mailto:104082552@student.swin.edu.au">Contact Us</a>
         </section>
-      </section>
+      </div>
     </main>
     <footer id="general-footer">
       <div class="footer-row">
