--- a/enhancements.html
+++ b/enhancements.html
@@ -32,13 +32,13 @@
     <main class="enhancements-main">
       <h1>Enhancements</h1>
       <section>
-        <h2><a href="apply.html">First: CSS Heading Typing Animation</a></h2>
+        <h2><a href="apply.html">First: Advanced CSS</a></h2>
         <p>
-          The first enhancement uses advanced CSS such as keyframes and
-          animations.
+          The first enhancement uses advanced CSS such as keyframes,
+          animations and flexbox.
         </p>
         <p>
-          The animation is done by placing the page heading into a container,
+          One example of our advanced CSS is the heading typing animation, which is done by placing the page heading into a container,
           then gradually increasing the width of the container to make it look
           like the text is being typed out. For the blinking cursor animation,
           the right border of the container alternates between solid black and
@@ -49,7 +49,10 @@
           individually to fit each heading.
         </p>
         <p>
-          The animation is done using only HTML and CSS, and the keyframes and
+          Another example is the use of flexbox and dynamic sizing to make our pages responsive. We have used advanced CSS to ensure that our pages dynamically resize according to the user's screen size. 
+        </p>
+        <p>
+          This enhancement is done solely using HTML and CSS, and the flexbox, keyframes and
           animations go beyond what was taught in the lectures. Overall, the aim
           of this enhancement was to make the website more dynamic and enjoyable
           to use, therefore increasing the quality of the website and making it
@@ -71,7 +74,7 @@
         </p>
       </section>
       <section>
-        <h2><a href="about.html">Second: CSS Hovering Animation</a></h2>
+        <h2><a href="about.html">Second: CSS Hovering Animations</a></h2>
         <p>The second enhancement uses simple hover CSS animation.</p>
         <p>
           The animation is done by adding a hover effect to the group member's
