--- a/enhancements.html
+++ b/enhancements.html
@@ -10,6 +10,7 @@
     <meta name="description" content="Website enhancements" />
   </head>
   <body class="index-body">
+    <!-- Header -->
     <header>
       <nav id="header-nav">
         <div class="logo">
@@ -30,6 +31,7 @@
       </nav>
     </header>
     <main class="enhancements-main">
+      <!-- ENHANCEMENT 1 -->
       <h1>Enhancements</h1>
       <section>
         <h2><a href="apply.html">First: Advanced CSS</a></h2>
@@ -49,7 +51,7 @@
           individually to fit each heading.
         </p>
         <p>
-          Another example is the use of flexbox and dynamic sizing to make our pages responsive. We have used advanced CSS to ensure that our pages dynamically resize according to the user's screen size. 
+          Another example is the use of flexbox and dynamic sizing to make our pages responsive. We have used advanced CSS to ensure that the font and elements on the page dynamically resize according to the user's screen size. 
         </p>
         <p>
           This enhancement is done solely using HTML and CSS, and the flexbox, keyframes and
@@ -73,6 +75,7 @@
           >.
         </p>
       </section>
+      <!-- ENHANCEMENT 2 -->
       <section>
         <h2><a href="about.html">Second: CSS Hovering Animations</a></h2>
         <p>The second enhancement uses simple hover CSS animation.</p>
@@ -154,7 +157,7 @@
           </p>
           <p>Phone Number: +61423032755</p>
         </div>
-
+        <!-- Footer -->
         <div class="footer-col">
           <h3>Links</h3>
           <ul>
