--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>CloudLabs</title>
   </head>
   <body class="index-body">
+    <!-- Header -->
     <header>
       <nav id="header-nav">
         <div class="logo">
@@ -58,6 +59,7 @@
         latest technologies and design trends to ensure that every website we
         create is modern, fast, and user-friendly.
       </p>
+      <!-- Services -->
       <section>
         <h2>Services we Provide</h2>
         <div class="row">
@@ -76,6 +78,7 @@
       <br />
       <br />
       <br />
+      <!-- Clients -->
       <h2>Companies we have worked with</h2>
       <section class="logos">
         <img class="logo-indi" src="images/forbes.png" alt="Forbes logo" />
@@ -92,6 +95,7 @@
       <br />
       <br />
       <br />
+      <!-- Reviews -->
       <h2>Here's some of our client reviews</h2>
       <section class="reviews-container">
         <h2>Reviews</h2>
@@ -124,11 +128,12 @@
         </section>
       </section>
     </section>
+    <!-- Link to video report -->
     <section class="link-report">
-      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Link To Report</a>
+      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Link To Video Report</a>
     </section>
     </main>
-
+    <!-- Footer -->
     <footer id="general-footer">
       <div class="footer-row">
         <div class="footer-col">
