--- a/jobs.html
+++ b/jobs.html
@@ -11,6 +11,7 @@
     <!-- <link rel="stylesheet" href="./styles/header_footer.css"> -->
 </head>
 <body class="index-body">
+    <!-- Header -->
     <header>
         <nav id="header-nav">
           <div class="logo">
@@ -43,7 +44,7 @@
             <li><a href="jobs.html#cto">Chief Technology Officer</a></li>
             <li><a href="jobs.html#cloud_en">Cloud Engineer</a></li>
         </ol>
-
+        <!-- JOB 1 -->
         <section>
             <h2 id="cto">Chief Technology Officer</h2>
             <dl>
@@ -121,6 +122,7 @@
                 <li>Knowledgeable in Mathematics, Statistics, and Business</li>
             </ul>
         </section>
+        <!-- JOB 2 -->
         <section>
             <h2 id="cloud_en">Cloud Engineer</h2>
             <dl>
@@ -213,6 +215,7 @@
             </ol>
         </aside>
     </main>
+    <!-- Footer -->
     <footer id="general-footer">
         <div class="footer-row">
           <div class="footer-col">
