--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <title>About Us - CloudLabs</title>
   </head>
   <body id="about-body" class="index-body">
+    <!-- Header -->
     <header>
       <nav id="header-nav">
         <div class="logo">
@@ -42,6 +43,7 @@
           attending conferences, training programs, and workshops to stay
           upgrade of the latest trends and technologies.
         </p>
+        <!-- Group Info -->
         <section class="about-group-info">
           <dl>
             <dt>Group Name</dt>
@@ -60,6 +62,7 @@
             <dd>Computing Technology Inquiry Project</dd>
           </dl>
         </section>
+        <!-- Members -->
         <div class="about-card">
           <img src="./images/member/Simon.png" alt="Tuan Minh member photo">
           <h3 class="about-h3">Tuan Minh</h3>
@@ -86,6 +89,7 @@
           <p>Role: Member</p>
         </div>
         <div>
+        <!-- Timetable -->
         <section class="about-timetable">
           <h2 class="about-h2">Timetable</h2>
           <table>
@@ -145,12 +149,14 @@
             </tbody>
           </table>
         </section>
+        <!-- Contact Us -->
         <section class="about-mail">
           <p>Want to get in touch with us?</p>
           <a href="mailto:104082552@student.swin.edu.au">Contact Us</a>
         </section>
       </div>
     </main>
+    <!-- Footer -->
     <footer id="general-footer">
       <div class="footer-row">
         <div class="footer-col">
