--- a/apply.html
+++ b/apply.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" type="text/css" href="styles/style.css" />
   <title>Apply - CloudLabs</title>
 </head>
-
 <body class="index-body">
+  <!-- Header -->
   <header>
     <nav id="header-nav">
       <div class="logo">
@@ -184,7 +184,7 @@
         </p>
         <p>Phone Number: +61423032755</p>
       </div>
-
+      <!-- Footer -->
       <div class="footer-col">
         <h3>Links</h3>
         <ul>
